[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "langsmith>=0.8.4",
    "python-dotenv>=1.2.2",
]
